--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><!-- EDIT THIS -->Our Vintage Love Story<!-- END EDIT --></title>
+    <title>Our Vintage Love Story</title>
+    <link rel="icon" href="./assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Parisienne&family=Pinyon+Script&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="home-bg">
 
     <div class="audio-control">
         <button id="play-btn" onclick="toggleMusic()">♪ Play Music</button>
@@ -19,203 +20,21 @@
     <main class="container">
         
         <header class="fade-in">
-            <h1 class="cursive-title"><!-- EDIT THIS -->Your Title Here<!-- END EDIT --></h1>
+            <h1 class="cursive-title">Your Title Here</h1>
             <div class="divider">❦</div>
-            <!-- Add your letter text here later -->
+            <p class="typewriter-text">
+                Welcome to our story. <br>
+                Click below to walk through our memories.
+                </p>
         </header>
 
-        <section class="gallery">
-    <!-- POLAROID 1 -->
-    <div class="polaroid fade-in" style="transform: rotate(-3deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo1.jpg" alt="Photo 1" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
+        <div class="nav-container fade-in">
+            <a href="pictures.html" class="nav-btn">See Our Memories →</a>
         </div>
-        <div class="caption">
-            <!-- Add caption for photo1 here -->
-        </div>
-    </div>
-
-    <!-- POLAROID 2 -->
-    <div class="polaroid fade-in" style="transform: rotate(2deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo2.jpg" alt="Photo 2" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
-        </div>
-        <div class="caption">
-            <!-- Add caption for photo2 here -->
-        </div>
-    </div>
-
-    <!-- POLAROID 3 -->
-    <div class="polaroid fade-in" style="transform: rotate(-2deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo3.jpg" alt="Photo 3" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
-        </div>
-        <div class="caption">
-            <!-- Add caption for photo3 here -->
-        </div>
-    </div>
-
-    <!-- POLAROID 4 -->
-    <div class="polaroid fade-in" style="transform: rotate(3deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo4.jpg" alt="Photo 4" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
-        </div>
-        <div class="caption">
-            <!-- Add caption for photo4 here -->
-        </div>
-    </div>
-
-    <!-- POLAROID 5 -->
-    <div class="polaroid fade-in" style="transform: rotate(-1deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo5.jpg" alt="Photo 5" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
-        </div>
-        <div class="caption">
-            <!-- Add caption for photo5 here -->
-        </div>
-    </div>
-
-    <!-- POLAROID 6 -->
-    <div class="polaroid fade-in" style="transform: rotate(1deg);">
-        <div class="photo-frame">
-            <img src="./assets/images/photo6.jpg" alt="Photo 6" onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
-        </div>
-        <div class="caption">
-            <!-- Add caption for photo6 here -->
-        </div>
-    </div>
-</section>
-
-        <section class="interactive-note fade-in">
-            <div class="envelope" onclick="openLetter()">
-                <span class="stamp">❤</span>
-                <!-- Add instruction text here if needed -->
-            </div>
-            <div id="hidden-message" class="hidden">
-                <!-- Add hidden note text here -->
-            </div>
-        </section>
-
-        <section class="scroll-list-section fade-in">
-    <h2 class="cursive-subtitle"><!-- EDIT THIS -->100 Things I Love About You<!-- END EDIT --></h2>
-    <div class="scroll-container">
-        <div class="scroll-content">
-            <ul class="typewriter-list">
-                <!-- Replace the text in each <li> with your own item -->
-                <li>1. [Your text here]</li>
-                <li>2. [Your text here]</li>
-                <li>3. [Your text here]</li>
-                <li>4. [Your text here]</li>
-                <li>5. [Your text here]</li>
-                <li>6. [Your text here]</li>
-                <li>7. [Your text here]</li>
-                <li>8. [Your text here]</li>
-                <li>9. [Your text here]</li>
-                <li>10. [Your text here]</li>
-                <li>11. [Your text here]</li>
-                <li>12. [Your text here]</li>
-                <li>13. [Your text here]</li>
-                <li>14. [Your text here]</li>
-                <li>15. [Your text here]</li>
-                <li>16. [Your text here]</li>
-                <li>17. [Your text here]</li>
-                <li>18. [Your text here]</li>
-                <li>19. [Your text here]</li>
-                <li>20. [Your text here]</li>
-                <li>21. [Your text here]</li>
-                <li>22. [Your text here]</li>
-                <li>23. [Your text here]</li>
-                <li>24. [Your text here]</li>
-                <li>25. [Your text here]</li>
-                <li>26. [Your text here]</li>
-                <li>27. [Your text here]</li>
-                <li>28. [Your text here]</li>
-                <li>29. [Your text here]</li>
-                <li>30. [Your text here]</li>
-                <li>31. [Your text here]</li>
-                <li>32. [Your text here]</li>
-                <li>33. [Your text here]</li>
-                <li>34. [Your text here]</li>
-                <li>35. [Your text here]</li>
-                <li>36. [Your text here]</li>
-                <li>37. [Your text here]</li>
-                <li>38. [Your text here]</li>
-                <li>39. [Your text here]</li>
-                <li>40. [Your text here]</li>
-                <li>41. [Your text here]</li>
-                <li>42. [Your text here]</li>
-                <li>43. [Your text here]</li>
-                <li>44. [Your text here]</li>
-                <li>45. [Your text here]</li>
-                <li>46. [Your text here]</li>
-                <li>47. [Your text here]</li>
-                <li>48. [Your text here]</li>
-                <li>49. [Your text here]</li>
-                <li>50. [Your text here]</li>
-                <li>51. [Your text here]</li>
-                <li>52. [Your text here]</li>
-                <li>53. [Your text here]</li>
-                <li>54. [Your text here]</li>
-                <li>55. [Your text here]</li>
-                <li>56. [Your text here]</li>
-                <li>57. [Your text here]</li>
-                <li>58. [Your text here]</li>
-                <li>59. [Your text here]</li>
-                <li>60. [Your text here]</li>
-                <li>61. [Your text here]</li>
-                <li>62. [Your text here]</li>
-                <li>63. [Your text here]</li>
-                <li>64. [Your text here]</li>
-                <li>65. [Your text here]</li>
-                <li>66. [Your text here]</li>
-                <li>67. [Your text here]</li>
-                <li>68. [Your text here]</li>
-                <li>69. [Your text here]</li>
-                <li>70. [Your text here]</li>
-                <li>71. [Your text here]</li>
-                <li>72. [Your text here]</li>
-                <li>73. [Your text here]</li>
-                <li>74. [Your text here]</li>
-                <li>75. [Your text here]</li>
-                <li>76. [Your text here]</li>
-                <li>77. [Your text here]</li>
-                <li>78. [Your text here]</li>
-                <li>79. [Your text here]</li>
-                <li>80. [Your text here]</li>
-                <li>81. [Your text here]</li>
-                <li>82. [Your text here]</li>
-                <li>83. [Your text here]</li>
-                <li>84. [Your text here]</li>
-                <li>85. [Your text here]</li>
-                <li>86. [Your text here]</li>
-                <li>87. [Your text here]</li>
-                <li>88. [Your text here]</li>
-                <li>89. [Your text here]</li>
-                <li>90. [Your text here]</li>
-                <li>91. [Your text here]</li>
-                <li>92. [Your text here]</li>
-                <li>93. [Your text here]</li>
-                <li>94. [Your text here]</li>
-                <li>95. [Your text here]</li>
-                <li>96. [Your text here]</li>
-                <li>97. [Your text here]</li>
-                <li>98. [Your text here]</li>
-                <li>99. [Your text here]</li>
-                <li>100. [Your text here]</li>
-            </ul>
-        </div>
-    </div>
-</section>
-
-        <footer class="fade-in">
-            <div class="divider">❦</div>
-            <p class="signature"><!-- EDIT THIS -->Your Name<!-- END EDIT --></p>
-        </footer>
 
     </main>
 
     <div id="floating-container"></div>
-
     <script src="script.js"></script>
 </body>
 </html>
