Added photo elements

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Photos</title>
+    <title>Lookie Lookie</title>
     <link rel="icon" href="./assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Parisienne&family=Pinyon+Script&display=swap" rel="stylesheet">
@@ -20,17 +20,17 @@
     <main class="container">
 
         <header class="fade-in">
-            <h2 class="cursive-subtitle">Moments in Time</h2>
+            <h2 class="cursive-subtitle">Bibi & her Personalities</h2>
         </header>
 
         <section class="gallery">
             <!-- Photo 1: Replace the src with your first photo -->
             <div class="polaroid fade-in" style="transform: rotate(-3deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo1.jpg" alt="Photo 1" 
+                    <img src="./assets/images/photo1.jpeg" alt="Photo 1" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="first pic you ever sent me and I've loved it since">
                     <!-- Caption for Photo 1: Write your description here -->
                 </div>
             </div>
@@ -38,10 +38,10 @@
             <!-- Photo 2: Replace the src with your second photo -->
             <div class="polaroid fade-in" style="transform: rotate(2deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo2.jpg" alt="Photo 2" 
+                    <img src="./assets/images/photo2.jpeg" alt="Photo 2" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="you're such a good dog mom">
                     <!-- Caption for Photo 2: Write your description here -->
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <img src="./assets/images/photo3.jpg" alt="Photo 3" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="the sun wished to appreciate your beauty so sun kissed you, get it? hehehe">
                     <!-- Caption for Photo 3: Write your description here -->
                 </div>
             </div>
@@ -60,10 +60,10 @@
             <!-- Photo 4: Replace the src with your fourth photo -->
             <div class="polaroid fade-in" style="transform: rotate(3deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo4.jpg" alt="Photo 4" 
+                    <img src="./assets/images/photo4.jpeg" alt="Photo 4" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="if looks could kill, I'd die at the hands of a cutey">
                     <!-- Caption for Photo 4: Write your description here -->
                 </div>
             </div>
@@ -71,10 +71,10 @@
             <!-- Photo 5: Replace the src with your fifth photo -->
             <div class="polaroid fade-in" style="transform: rotate(-1deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo5.jpg" alt="Photo 5" 
+                    <img src="./assets/images/photo5.jpeg" alt="Photo 5" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="best daughter award goes tooooo">
                     <!-- Caption for Photo 5: Write your description here -->
                 </div>
             </div>
@@ -82,10 +82,10 @@
             <!-- Photo 6: Replace the src with your sixth photo -->
             <div class="polaroid fade-in" style="transform: rotate(1deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo6.jpg" alt="Photo 6" 
+                    <img src="./assets/images/photo6.jpeg" alt="Photo 6" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">
+                <div class="though shmol, you are still my Queen">
                     <!-- Caption for Photo 6: Write your description here -->
                 </div>
             </div>
@@ -93,7 +93,7 @@
 
         <div class="nav-container fade-in">
             <a href="index.html" class="nav-btn">← Back</a>
-            <a href="hundred.html" class="nav-btn">100 Things I Love →</a>
+            <a href="hundred.html" class="nav-btn">100 Things I love 'bout you →</a>
         </div>
 
     </main>
