Update titles and captions in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lookie Lookie</title>
+    <title>Personality 101</title>
     <link rel="icon" href="./assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Parisienne&family=Pinyon+Script&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                     <img src="./assets/images/photo1.jpeg" alt="Photo 1" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="first pic you ever sent me and I've loved it since">
+                <div class="caption">The first pic you ever sent me and I've loved it since</div>
                     <!-- Caption for Photo 1: Write your description here -->
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <img src="./assets/images/photo2.jpeg" alt="Photo 2" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="you're such a good dog mom">
+                <div class="caption">Mickey's Mom</div>
                     <!-- Caption for Photo 2: Write your description here -->
                 </div>
             </div>
@@ -49,10 +49,10 @@
             <!-- Photo 3: Replace the src with your third photo -->
             <div class="polaroid fade-in" style="transform: rotate(-2deg);">
                 <div class="photo-frame">
-                    <img src="./assets/images/photo3.jpg" alt="Photo 3" 
+                    <img src="./assets/images/photo3.jpeg" alt="Photo 3" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="the sun wished to appreciate your beauty so sun kissed you, get it? hehehe">
+                <div class="caption">the sun wished to appreciate your beauty so sun kissed you, get it? hehehe</div>
                     <!-- Caption for Photo 3: Write your description here -->
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <img src="./assets/images/photo4.jpeg" alt="Photo 4" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="if looks could kill, I'd die at the hands of a cutey">
+                <div class="caption">If looks could kill, I'd die at the hands of a cutey</div>
                     <!-- Caption for Photo 4: Write your description here -->
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <img src="./assets/images/photo5.jpeg" alt="Photo 5" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="best daughter award goes tooooo">
+                <div class="caption">best daughter award goes tooooo!!!</div>
                     <!-- Caption for Photo 5: Write your description here -->
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <img src="./assets/images/photo6.jpeg" alt="Photo 6" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="though shmol, you are still my Queen">
+                <div class="caption">shmol, cute and deadly</div>
                     <!-- Caption for Photo 6: Write your description here -->
                 </div>
             </div>
