Enhance photo captions with additional details
Updated captions for several photos to add more personal touches and context.

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
                     <img src="./assets/images/photo1.jpeg" alt="Photo 1" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">The first pic you ever sent me and I've loved it since</div>
+                <div class="caption">The first pic you ever sent me and I've loved it since. Never fallen out of love with that smile.</div>
                     <!-- Caption for Photo 1: Write your description here -->
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <img src="./assets/images/photo2.jpeg" alt="Photo 2" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">Mickey's Mom</div>
+                <div class="caption">Mickey's Mommy and he loves you very much</div>
                     <!-- Caption for Photo 2: Write your description here -->
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <img src="./assets/images/photo3.jpeg" alt="Photo 3" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">the sun wished to appreciate your beauty so sun kissed you, get it? hehehe</div>
+                <div class="caption">The sun wished to appreciate your beauty so sun kissed you, get it? you're sun kissed. hehehe</div>
                     <!-- Caption for Photo 3: Write your description here -->
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <img src="./assets/images/photo5.jpeg" alt="Photo 5" 
                          onerror="this.src='https://placehold.co/300x300/e6d2b5/4a3b32?text=Add+Image+Here'">
                 </div>
-                <div class="caption">best daughter award goes tooooo!!!</div>
+                <div class="caption">best daughter award goes tooooo!!! You know your Mum loves you cause you're her baby and she probably misses going places with you. You make her proud.</div>
                     <!-- Caption for Photo 5: Write your description here -->
                 </div>
             </div>
