Add personal items to the list of loves

--- a/hundred.html
+++ b/hundred.html
@@ -26,108 +26,107 @@
             <div class="scroll-container">
                 <div class="scroll-content">
                     <ul class="typewriter-list">
-                        <!-- Replace [Your text here] with your 100 items -->
-                        <li>1. [Your text here]</li>
-                        <li>2. [Your text here]</li>
-                        <li>3. [Your text here]</li>
-                        <li>4. [Your text here]</li>
-                        <li>5. [Your text here]</li>
-                        <li>6. [Your text here]</li>
-                        <li>7. [Your text here]</li>
-                        <li>8. [Your text here]</li>
-                        <li>9. [Your text here]</li>
-                        <li>10. [Your text here]</li>
-                        <li>11. [Your text here]</li>
-                        <li>12. [Your text here]</li>
-                        <li>13. [Your text here]</li>
-                        <li>14. [Your text here]</li>
-                        <li>15. [Your text here]</li>
-                        <li>16. [Your text here]</li>
-                        <li>17. [Your text here]</li>
-                        <li>18. [Your text here]</li>
-                        <li>19. [Your text here]</li>
-                        <li>20. [Your text here]</li>
-                        <li>21. [Your text here]</li>
-                        <li>22. [Your text here]</li>
-                        <li>23. [Your text here]</li>
-                        <li>24. [Your text here]</li>
-                        <li>25. [Your text here]</li>
-                        <li>26. [Your text here]</li>
-                        <li>27. [Your text here]</li>
-                        <li>28. [Your text here]</li>
-                        <li>29. [Your text here]</li>
-                        <li>30. [Your text here]</li>
-                        <li>31. [Your text here]</li>
-                        <li>32. [Your text here]</li>
-                        <li>33. [Your text here]</li>
-                        <li>34. [Your text here]</li>
-                        <li>35. [Your text here]</li>
-                        <li>36. [Your text here]</li>
-                        <li>37. [Your text here]</li>
-                        <li>38. [Your text here]</li>
-                        <li>39. [Your text here]</li>
-                        <li>40. [Your text here]</li>
-                        <li>41. [Your text here]</li>
-                        <li>42. [Your text here]</li>
-                        <li>43. [Your text here]</li>
-                        <li>44. [Your text here]</li>
-                        <li>45. [Your text here]</li>
-                        <li>46. [Your text here]</li>
-                        <li>47. [Your text here]</li>
-                        <li>48. [Your text here]</li>
-                        <li>49. [Your text here]</li>
-                        <li>50. [Your text here]</li>
-                        <li>51. [Your text here]</li>
-                        <li>52. [Your text here]</li>
-                        <li>53. [Your text here]</li>
-                        <li>54. [Your text here]</li>
-                        <li>55. [Your text here]</li>
-                        <li>56. [Your text here]</li>
-                        <li>57. [Your text here]</li>
-                        <li>58. [Your text here]</li>
-                        <li>59. [Your text here]</li>
-                        <li>60. [Your text here]</li>
-                        <li>61. [Your text here]</li>
-                        <li>62. [Your text here]</li>
-                        <li>63. [Your text here]</li>
-                        <li>64. [Your text here]</li>
-                        <li>65. [Your text here]</li>
-                        <li>66. [Your text here]</li>
-                        <li>67. [Your text here]</li>
-                        <li>68. [Your text here]</li>
-                        <li>69. [Your text here]</li>
-                        <li>70. [Your text here]</li>
-                        <li>71. [Your text here]</li>
-                        <li>72. [Your text here]</li>
-                        <li>73. [Your text here]</li>
-                        <li>74. [Your text here]</li>
-                        <li>75. [Your text here]</li>
-                        <li>76. [Your text here]</li>
-                        <li>77. [Your text here]</li>
-                        <li>78. [Your text here]</li>
-                        <li>79. [Your text here]</li>
-                        <li>80. [Your text here]</li>
-                        <li>81. [Your text here]</li>
-                        <li>82. [Your text here]</li>
-                        <li>83. [Your text here]</li>
-                        <li>84. [Your text here]</li>
-                        <li>85. [Your text here]</li>
-                        <li>86. [Your text here]</li>
-                        <li>87. [Your text here]</li>
-                        <li>88. [Your text here]</li>
-                        <li>89. [Your text here]</li>
-                        <li>90. [Your text here]</li>
-                        <li>91. [Your text here]</li>
-                        <li>92. [Your text here]</li>
-                        <li>93. [Your text here]</li>
-                        <li>94. [Your text here]</li>
-                        <li>95. [Your text here]</li>
-                        <li>96. [Your text here]</li>
-                        <li>97. [Your text here]</li>
-                        <li>98. [Your text here]</li>
-                        <li>99. [Your text here]</li>
-                        <li>100. [Your text here]</li>
-                    </ul>
+    <li>Your soul</li>
+    <li>Your mind</li>
+    <li>Your heart</li>
+    <li>How happy little things make you</li>
+    <li>How happy helping others makes you</li>
+    <li>Your morning sleepy voice</li>
+    <li>Your 69420 personalities hehehe</li>
+    <li>Your love for animals</li>
+    <li>Your hatred of insects</li>
+    <li>Your multifaceted personality</li>
+    <li>Your taste buds</li>
+    <li>Your music taste</li>
+    <li>Your love of nature</li>
+    <li>Your curiosity</li>
+    <li>Your inside laugh</li>
+    <li>Your outside laugh</li>
+    <li>Your shyness</li>
+    <li>Your extrovertness (seasonal)</li>
+    <li>Your jokes</li>
+    <li>Your hugs</li>
+    <li>Your daily story times</li>
+    <li>Your perfectionism</li>
+    <li>Your cuddliness</li>
+    <li>Your warmth</li>
+    <li>Your honesty</li>
+    <li>Your ideas</li>
+    <li>Your scent anywhere</li>
+    <li>You listen</li>
+    <li>Your hate for philosophy (though your philosophical)</li>
+    <li>Your spontaneity</li>
+    <li>Your friendship</li>
+    <li>Your love</li>
+    <li>That we met</li>
+    <li>Our mouth itchy moments</li>
+    <li>Your stubbornness</li>
+    <li>Your selflessness</li>
+    <li>Your cute excited eyes</li>
+    <li>Your cute excited smile</li>
+    <li>Your cute excited laugh</li>
+    <li>Your random bursts of energy</li>
+    <li>Your dramatic moments</li>
+    <li>Your energy</li>
+    <li>Your vibe</li>
+    <li>Your humility</li>
+    <li>You feel like home</li>
+    <li>Your pet peeves</li>
+    <li>Your love for the cold</li>
+    <li>Your intellect</li>
+    <li>Your concentration span</li>
+    <li>Your dori syndrome</li>
+    <li>Your wild side</li>
+    <li>Your patience</li>
+    <li>Your fashion sense</li>
+    <li>Your considerateness</li>
+    <li>Your emotional maturity</li>
+    <li>Your helpfulness</li>
+    <li>Your soft silky skin</li>
+    <li>Your hair</li>
+    <li>Your eyes</li>
+    <li>Your cute nose</li>
+    <li>Your natural blush</li>
+    <li>Your perfectly curved eyebrows</li>
+    <li>Your values</li>
+    <li>Your family</li>
+    <li>Your support</li>
+    <li>Your ears with/without the earrings</li>
+    <li>Your square nosestrills</li>
+    <li>Your cute lil nose</li>
+    <li>Your smile</li>
+    <li>Your lips</li>
+    <li>Your nape</li>
+    <li>Your scent behind your ears</li>
+    <li>Your neck</li>
+    <li>Your small, soft cute hands</li>
+    <li>Your cute nails before & after growing them</li>
+    <li>Your authentic self</li>
+    <li>Your famous “HUH”</li>
+    <li>Your wits</li>
+    <li>Your obsession (currently) with mogu mogu</li>
+    <li>Your hate for maths</li>
+    <li>Your gentleness</li>
+    <li>Your desire to adapt</li>
+    <li>Your fascination</li>
+    <li>Your glint when you’re happy</li>
+    <li>Your empathy</li>
+    <li>Your independence</li>
+    <li>Your “5 more minutes”</li>
+    <li>Your hate for waking up early</li>
+    <li>Your love to travel</li>
+    <li>Your random singing</li>
+    <li>Your creativity</li>
+    <li>Your mischievous side</li>
+    <li>Your attitude</li>
+    <li>Your thoughtfulness</li>
+    <li>Your judgy faces</li>
+    <li>Your resilience</li>
+    <li>Your insightfulness</li>
+    <li>Your open-mindedness</li>
+    <li>Your bursts of song</li>
+    <li>Bibianna Yeo Li Wei</li>
+</ul>
                 </div>
             </div>
         </section>
