Change title and update letter content
Updated the title and modified the letter content for a more personal touch.

--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Love Please Listen</title>
+    <title>My Love</title>
     <link rel="icon" href="./assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Parisienne&family=Pinyon+Script&display=swap" rel="stylesheet">
@@ -19,28 +19,20 @@
     </div>
 
     <main class="container">
-        
-        <!-- Clickable envelope to reveal the letter -->
-        <section class="interactive-note fade-in">
-            <div class="secret-letter" onclick="revealLetter()">
-    <img src="heart.png" alt="Heart Icon" class="heart-icon">
-    <p>Click Me Princess</p>
-</div>
-
-            <!-- Hidden letter content -->
-<div id="hidden-message" class="hidden">
-    <p class="typewriter-text">
-        Hey baby,<br><br>
-        I know this week’s been…a Lando Norris special. But don’t let it boss you around, Bibi doesn’t get bossed around now does she? You’re beautiful, inside and out, and I’ll fight anyone who says otherwise (even if it’s just a bad vibe passing by idc). You’re the most amazing; daughter, sister, pet mommy, friend, partner, basically the whole package. And me? I’m your number one nigget, forever and always.<br><br>
-        I’m so proud of you for stepping out of your comfort zone, trying things old Bibi would’ve said “huh, hell no” to. You’re growing, glowing, and I love that. Life can be a bitch sometimes, but girl, The lioness doesn’t concern herself with mortal nonsense (yes, that was cringe, I’m owning it, hahaha).<br><br>
-        I love you so much. I’m here, I’m proud, and I hope this makes you smile even a little. Because you deserve that, every single day my bebi.
-    </p>
-</div>
+        <!-- Paper-like letter -->
+        <div class="letter-paper fade-in">
+            <p class="typewriter-text">
+Hey baby,<br><br>
+I know this week’s been…a Lando Norris special. But don’t let it boss you around, Bibi doesn’t get bossed around now does she? You’re beautiful, inside and out, and I’ll fight anyone who says otherwise (even if it’s just a bad vibe passing by idc). You’re the most amazing; daughter, sister, pet mommy, friend, partner, basically the whole package. And me? I’m your number one nigget, forever and always.<br><br>
+I’m so proud of you for stepping out of your comfort zone, trying things old Bibi would’ve said “huh, hell no” to. You’re growing, glowing, and I love that. Life can be a bitch sometimes, but girl, The lioness doesn’t concern herself with mortal nonsense (yes, that was cringe, I’m owning it, hahaha).<br><br>
+I love you so much. I’m here, I’m proud, and I hope this makes you smile even a little. Because you deserve that, every single day my bebi.
+            </p>
+        </div>
 
         <!-- Signature area -->
         <footer class="fade-in">
             <div class="divider">❦</div>
-            <p class="signature"><!-- Replace with your name -->Your Nigget</p>
+            <p class="signature">Your Nigget</p>
         </footer>
 
         <!-- Navigation -->
@@ -48,7 +40,6 @@
             <a href="hundred.html" class="nav-btn">← Back</a>
             <a href="index.html" class="nav-btn">Home ⌂</a>
         </div>
-
     </main>
 
     <div id="floating-container"></div>
