--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <div class="audio-control">
         <button id="play-btn" onclick="toggleMusic()">♪ Play Music</button>
         <audio id="bg-music" loop>
-            <source src="./assets/audio/song.mp3" type="audio/mpeg">
+            <source src="./assets/audio/bg-music.mp3" type="audio/mpeg">
         </audio>
     </div>
 
